post controller index action | spec | openAPI schema
